--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -35,7 +35,13 @@ jobs:
        npx nuxi generate
        mkdir build_nuxt
        mv dist build_nuxt
-    - run: |
        cd build_nuxt/dist
-       ls -R 
-      
+       ls ../..
+    # - uses: actions/setup-node@v4
+    # - run: | 
+    #    git config user.name "github-actions[bot]"
+    #    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    #    git add .
+    #    git commit -m "generated"
+    #    git push
+       
