--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -36,8 +36,10 @@ jobs:
        mkdir build_nuxt
        mv dist build_nuxt
        cd build_nuxt/dist
-       ls ../..
-    # - uses: actions/setup-node@v4
+       cd ..
+    - uses: actions/setup-node@v4
+    - run: |
+      ls -a
     # - run: | 
     #    git config user.name "github-actions[bot]"
     #    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
