--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -37,8 +37,9 @@ jobs:
        mv dist build_nuxt
        cd build_nuxt/dist
        cd ..
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
     - run: |
+       pwd
        ls -a
     # - run: | 
     #    git config user.name "github-actions[bot]"
