--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -34,13 +34,14 @@ jobs:
        npm ci
        npx nuxi generate
        mkdir build_nuxt
+       mkdir checkout
        mv dist build_nuxt
-       cd build_nuxt/dist
-       cd ..
-    # - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+          path:  checkout
     - run: |
        pwd
-       ls -aR
+       ls -a
     # - run: | 
     #    git config user.name "github-actions[bot]"
     #    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
