--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -40,7 +40,7 @@ jobs:
     - run: |
        pwd
        cp -R dist/* checkout
-       ls -R checkout
+       ls -Ra checkout
     # - run: | 
     #    git config user.name "github-actions[bot]"
     #    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
