--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -41,10 +41,10 @@ jobs:
        pwd
        cp -R dist/* checkout
        ls -Ra checkout
-    # - run: | 
-    #    git config user.name "github-actions[bot]"
-    #    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-    #    git add .
-    #    git commit -m "generated"
-    #    git push
+    - run: | 
+       git config user.name "github-actions[bot]"
+       git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+       git add .
+       git commit -m "generated"
+       git push
        
