--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -45,6 +45,7 @@ jobs:
        git config user.name "github-actions[bot]"
        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
        cd checkout
-       ls -a
-      
+       git add .
+       git commit -m "generated"
+       git push
        
