--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -42,7 +42,7 @@ jobs:
        cp -R dist/* checkout
        ls -Ra checkout
     - run: | 
-       git config user.name "github-actions[bot]"
+       git config user.name "megroponte"
        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
        cd checkout
        git add .
