--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -42,8 +42,10 @@ jobs:
        cp -R dist/* checkout
        ls -Ra checkout
     - run: | 
-       git config user.name "github-actions[bot]"
-       git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+       # git config user.** の設定の仕方は以下を参照
+       # https://qiita.com/thaim/items/3d1a4d09ec4a7d8844ce 
+       git config user.name ${{ secrets.PUSH_USER_NAME }}
+       git config user.email ${{ secrets.PUSH_EMAIL }}
        cd checkout
        git add .
        git commit -m "generated"
