--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -38,14 +38,10 @@ jobs:
       with:
           path:  checkout
     - run: |
-       pwd
        cp -R dist/* checkout
-       ls -Ra checkout
     - run: | 
-       # git config user.** の設定の仕方は以下を参照
-       # https://qiita.com/thaim/items/3d1a4d09ec4a7d8844ce 
-       git config --local user.email "${{ secrets.PUSH_EMAIL }}"
-       git config --local user.name "${{ secrets.PUSH_USER_NAME }}"
+       git config --local user.email ${{ secrets.PUSH_EMAIL }}
+       git config --local user.name ${{ secrets.PUSH_USER_NAME }}
        cd checkout
        git add .
        git commit -m "generated"
